--- a/applications/backend/templates/hpa.yaml
+++ b/applications/backend/templates/hpa.yaml
@@ -2,7 +2,7 @@
 apiVersion: autoscaling/v2
 kind: HorizontalPodAutoscaler
 metadata:
-  name: {{ .Release.Name }}-hpa
+  name: {{ .Release.Name }}-backend
   labels:
     app.kubernetes.io/name: backend
     app.kubernetes.io/component:
