--- a/applications/backend/app/Dockerfile
+++ b/applications/backend/app/Dockerfile
@@ -8,3 +8,9 @@ RUN pip install --no-cache-dir -r requirements.txt
 COPY app.py .
 EXPOSE 8081
 CMD ["python", "app.py"]
+
+RUN apt-get update && apt-get install -y mysql-client
+
+
+
+
