--- a/applications/backend/values-dev.yaml
+++ b/applications/backend/values-dev.yaml
@@ -8,9 +8,8 @@ image:
 service:
   type: ClusterIP
   port: 8081
-
 mysql:
-  secretName: mysql-credentials-dev   # match sealed secret name
+  secretName: mysql-dev-secret
 
 resources:
   requests:
