--- a/applications/backend/app/Dockerfile
+++ b/applications/backend/app/Dockerfile
@@ -1,16 +1,20 @@
-ARG BASE_IMAGE=python:3.11-slim-bullseye
-FROM ${BASE_IMAGE}
+FROM python:3.11-slim-bullseye
+
+# Install build dependencies for mysqlclient
+RUN apt-get update && apt-get install -y \
+    gcc \
+    pkg-config \
+    default-libmysqlclient-dev \
+    build-essential \
+  && rm -rf /var/lib/apt/lists/*
 
 WORKDIR /app
 
 COPY requirements.txt .
-RUN pip install --no-cache-dir -r requirements.txt
+
+RUN pip install --upgrade pip \
+ && pip install --no-cache-dir -r requirements.txt
 
 COPY app.py .
-
-EXPOSE 8081
-
-RUN useradd -m -u 1000 appuser && chown -R appuser:appuser /app
-USER appuser
 
 CMD ["python", "app.py"]
