--- a/.github/workflows/terraform.yml
+++ b/.github/workflows/terraform.yml
@@ -23,15 +23,14 @@ jobs:
       - name: Install k3d & kubectl
         run: |
           curl -s https://raw.githubusercontent.com/k3d-io/k3d/main/install.sh | bash
-          sudo apt-get update
-          sudo apt-get install -y kubectl
+          sudo apt-get update && sudo apt-get install -y kubectl
           k3d cluster create $CLUSTER_NAME --wait
 
       - name: Write kubeconfig for Terraform
         run: |
           mkdir -p ~/.kube
-          k3d kubeconfig get $CLUSTER_NAME > ~/.kube/$CLUSTER_NAME-config
-          cp ~/.kube/$CLUSTER_NAME-config ~/.kube/vyking-dev-config
+          k3d kubeconfig get $CLUSTER_NAME > ~/.kube/${CLUSTER_NAME}-config
+          cp ~/.kube/${CLUSTER_NAME}-config ~/.kube/vyking-${ENVIRONMENT}-config
 
       - name: Build and import images
         run: |
