--- a/applications/backend/environments/values-dev.yaml
+++ b/applications/backend/environments/values-dev.yaml
@@ -9,7 +9,7 @@ service:
   type: ClusterIP
   port: 8081
 mysql:
-  secretName: mysql-dev-secret
+  secretName: mysql-credentials-dev
 
 resources:
   requests:
